--- a/final/frontend/src/app.css
+++ b/final/frontend/src/app.css
@@ -11,3 +11,15 @@
   max-width: 800px;
   width: 100%;
 }
+
+#product-image {
+  max-height: 100%;
+}
+
+#product-name {
+  height: 50px;
+}
+
+#product-card {
+  height: 200px;
+}
