added category button

--- a/final/frontend/src/app.css
+++ b/final/frontend/src/app.css
@@ -71,3 +71,7 @@
 .nav-link:hover {
   cursor: pointer;
 }
+
+[data-bs-theme="dark"] .btn-close {
+  filter: none !important; /* Resetting the filter */
+}
