--- a/final/frontend/src/app.css
+++ b/final/frontend/src/app.css
@@ -80,6 +80,10 @@
   height: 120px;
 }
 
+#cart-remove:hover {
+  cursor: pointer;
+}
+
 [data-bs-theme="dark"] .btn-close {
   filter: none !important; /* Resetting the filter */
 }
